<resources>
    <string name="app_name">Dash control</string>
    <string name="title_news">News</string>
    <string name="title_proposals">Proposals</string>
    <string name="title_prices">Prices</string>
    <string name="title_portfolio">Portfolio</string>

    <string name="alert_message">Network is not available. Loading Offline Data.</string>
    <string name="alert_title">Error</string>
    <string name="alert_positive">@android:string/ok</string>
    <string name="title_activity_settings">Settings</string>
    <string name="language_preference" translatable="false">language_preference</string>
    <string name="eng">English</string>
    <string name="esp">Spanish</string>
    <string name="fr">French</string>
    <string name="pt">Portuguese</string>
    <string name="cn">Chinese</string>
    <string name="ru">Russian</string>
    <string name="jp">Japanese</string>
    <string name="kr">Korean</string>
    <string name="button_accept_proposal">Accept budgetProposal</string>
    <string name="button_abstain">Abstain</string>
    <string name="button_no">No</string>
    <string name="title">Title</string>
    <string name="proposal_owner">(proposal owner)</string>
    <string name="no_id">No id</string>
    <string name="no_title">No Title</string>
    <string name="no_owner">No owner</string>
    <string name="owner_format">Owner %1$s</string>
    <string name="total">Total</string>
    <string name="allocated">Allocated</string>
    <string name="payment_type_one_time">One-time\npayment</string>
    <string name="payment_type_monthly">Monthly\namount</string>
    <string name="no_payments_occurred_yet">no payments occurred yet</string>
    <string name="no_dash">0 DASH</string>
    <string name="completed_payment_tag">Completed\npayments</string>
    <string name="time_remaining_tag">Time\nremaining</string>
    <string name="no_month_remaining">No month remaining</string>
    <string name="no_dash_payment">0 totaling in 0 DASH</string>
    <string name="completed_payments_format">%1$d totaling in %2$.2f DASH</string>
    <string name="no_yes">0 Yes</string>
    <string name="no_no">0 No</string>
    <string name="no_abstain">0 Abstain</string>
    <string name="votes_yes">Yes</string>
    <string name="votes_no">No</string>
    <string name="votes_abstain">Abstain</string>
    <string name="no_description">No description</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="default_percentage">0%</string>
    <string name="no_title_entered_by_proposal_owner">No title entered by budgetProposal owner</string>
    <string name="textview_no_comments">No comments</string>
    <string name="per_month">p/m</string>
    <string name="comments">%1$d comments</string>
    <string name="join_the_discussion_title">Join the discussion!</string>
    <string name="join_the_discussion">Join the discussion</string>
    <string name="submit_comments">Submit your comments and exchange your ideas on this proposal</string>
    <string name="in_replay_to">In replay to %s</string>
    <string name="in_replay_to_owner">In replay to %s (proposal owner)</string>
    <string name="reply_button">Reply</string>
    <string name="hide_reply_button">Hide reply</string>
    <string name="add_reply_here">Add reply here…</string>
    <string name="show_full_description">Show full description</string>
    <string name="hide_full_description">Hide full description</string>
    <string name="add_replay">Add Reply</string>
    <string name="login_to_dashcentral">Login to your account using DashCentral\nOpen DashCentral.org &#x2192;\nMy Account &#x2192; Mobile Access\nand scan the QR code\n\n</string>
    <string name="dash_amount" translatable="false">%1$s DASH</string>
    <string name="dash_amount_float" translatable="false">%1$.2f DASH</string>
    <string name="by">by %1$s</string>
    <string name="simple_percentage_value">"%d%%"</string>

    <string name="radio_5m">5m</string>
    <string name="radio_15m">15m</string>
    <string name="radio_30m">30m</string>
    <string name="radio_2h">2h</string>
    <string name="radio_4h">4h</string>
    <string name="radio_6h">6h</string>
    <string name="radio_24h">24h</string>
    <string name="radio_1d">1d</string>
    <string name="radio_2d">2d</string>
    <string name="radio_4d">4d</string>
    <string name="radio_1w">1w</string>
    <string name="radio_2w">2w</string>
    <string name="radio_1m">1m</string>
    <string name="radio_3m">3m</string>

    <string name="portfolio_your_dash">Your Dash</string>
    <string name="portfolio_usd_value">Value in USD</string>

    <string name="add_portfolio_entry_my_wallets">My Wallets</string>
    <string name="add_portfolio_entry_my_masternodes">My Masternodes</string>
    <string name="add_portfolio_entry_add_masternode">Add Masternode</string>
    <string name="add_portfolio_entry_add_wallet">Add Wallet</string>
    <string name="add_portfolio_entry_edit_masternode">Edit Masternode</string>
    <string name="add_portfolio_entry_edit_wallet">Edit Wallet</string>
    <string name="add_portfolio_entry_label_hint">Label</string>
    <string name="add_portfolio_entry_address_hint">Address</string>
    <string name="add_portfolio_entry_voting_key_hint">Voting key</string>
    <string name="add_portfolio_entry_payment_notification">Payment Notification</string>
    <string name="add_portfolio_entry_include_masternode_earnings">Include Masternode earnings</string>
    <string name="add_portfolio_entry_scan_qr_code">Scan QR code</string>
    <string name="add_portfolio_entry_import_using_qr_code">Import using QR code</string>
    <string name="add_portfolio_entry_select_wallet">Select Wallet</string>
    <string name="add_portfolio_entry_wallet_not_installed">Dash Wallet not installed</string>
    <string name="add_portfolio_entry_wallet_label_format">Wallet %d</string>
    <string name="add_portfolio_entry_masternode_label_format">Masternode %d</string>
    <string name="add_portfolio_entry_empty_address">Address cannot be empty</string>
    <string name="add_portfolio_entry_invalid_address">Incorrect format of Address</string>
    <string name="add_portfolio_entry_public_key_already_added">Address already added as %s</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="action_save_credential">Save\nCredential</string>
    <string name="load_credentials">Load\nCredentials</string>
    <string name="delete_credential">Delete\nCredential</string>
    <string name="load_hint">Load\nHint</string>
    <string name="label_request_id_token">Request ID Token:</string>

    <string name="lorem_ipsum_shortest">Lorem ipsum.</string>
    <string name="lorem_ipsum_short">Lorem ipsum dolor sit amet.</string>
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="lorem_ipsum_longest">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque porta imperdiet viverra. Duis rhoncus nunc auctor sem volutpat rutrum. Duis nec est placerat, vestibulum enim at, sollicitudin odio. Suspendisse ut nulla porttitor.</string>

    <string name="not_yet_supported">Not yet supported</string>

    <string name="proposal_filter_current">Current</string>
    <string name="proposal_filter_ongoing">Ongoing</string>
    <string name="proposal_filter_past">Past</string>

    <string name="superblocks_summary">%d Superblocks in %s %s</string>

    <string name="chart_marker_date">Date: %s</string>
    <string name="chart_marker_open">Open: %f</string>
    <string name="chart_marker_close">Close: %f</string>
    <string name="chart_marker_high">High: %f</string>
    <string name="chart_marker_low">Low: %f</string>
    <string name="chart_marker_volume_dash">Vol1 : %f</string>
    <string name="chart_marker_volume">Vol2 : %f</string>

    <plurals name="comment_points">
        <item quantity="one">%d point, %s</item>
        <item quantity="other">%d points, %s</item>
    </plurals>

    <plurals name="months_remaining">
        <item quantity="one">%1$d month remaining</item>
        <item quantity="other">%1$d months remaining</item>
    </plurals>

</resources>
