<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dash.dashapp.Fragments.PriceFragment">

    <TextView
        android:id="@+id/priceTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <com.github.mikephil.charting.charts.CandleStickChart
        android:id="@+id/chart1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup_scale"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceTextview" />

    <RadioGroup
        android:id="@+id/radioGroup_scale"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation='horizontal'
        app:layout_constraintBottom_toTopOf="@+id/radioGroup_gap">

        <RadioButton
            android:id="@+id/radio6h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/scale_selector"
            android:textColor="@drawable/color_selector"
            android:checked="true"
            android:text="@string/radio_6h"
            android:button="@android:color/transparent" />

        <RadioButton
            android:id="@+id/radio24h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/scale_selector"
            android:text="@string/radio_24h"
            android:button="@android:color/transparent" />

        <RadioButton
            android:id="@+id/radio2d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/scale_selector"
            android:checked="true"
            android:text="@string/radio_2d"
            android:button="@android:color/transparent" />

        <RadioButton
            android:id="@+id/radio4d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/scale_selector"
            android:text="@string/radio_4d"
            android:button="@android:color/transparent" />

        <RadioButton
            android:id="@+id/radio1w"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/scale_selector"
            android:checked="true"
            android:text="@string/radio_1w"
            android:button="@android:color/transparent" />

        <RadioButton
            android:id="@+id/radio2w"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/scale_selector"
            android:text="@string/radio_2w"
            android:button="@android:color/transparent" />

        <RadioButton
            android:id="@+id/radio1m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/scale_selector"
            android:checked="true"
            android:text="@string/radio_1m"
            android:button="@android:color/transparent" />

        <RadioButton
            android:id="@+id/radio3m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/scale_selector"
            android:text="@string/radio_3m"
            android:button="@android:color/transparent" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup_gap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation='horizontal'
        app:layout_constraintBottom_toBottomOf="parent">

        <RadioButton
            android:id="@+id/radio5m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/scale_selector"
            android:checked="true"
            android:text="@string/radio_5m"
            android:button="@android:color/transparent" />

        <RadioButton
            android:id="@+id/radio15m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/scale_selector"
            android:text="@string/radio_15m"
            android:button="@android:color/transparent" />

        <RadioButton
            android:id="@+id/radio30m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/scale_selector"
            android:checked="true"
            android:text="@string/radio_30m"
            android:button="@android:color/transparent" />

        <RadioButton
            android:id="@+id/radio2h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/scale_selector"
            android:text="@string/radio_2h"
            android:button="@android:color/transparent" />

        <RadioButton
            android:id="@+id/radio4h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/scale_selector"
            android:checked="true"
            android:text="@string/radio_4h"
            android:button="@android:color/transparent" />

        <RadioButton
            android:id="@+id/radio1d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/scale_selector"
            android:text="@string/radio_1d"
            android:button="@android:color/transparent" />
    </RadioGroup>


</android.support.constraint.ConstraintLayout>
